2007-05-08  Bernhard R. Link <brlink@debian.org>
	* output data received from helper (i.e. valgrind) line-by-line
	  for better readabilty.
2007-03-16  Bernhard R. Link <brlink@debian.org>
	* fix bug in parsing long rules
2007-03-14  Bernhard R. Link <brlink@debian.org>
	* add --checkstdout option to change the stdout default
2007-03-13  Bernhard R. Link <brlink@debian.org>
	* add variables support