@@ -1,3 +1,6 @@
+2007-10-31  Bernhard R. Link <brlink@debian.org>
+	* new --ignoreunexpected switch to not exit with error on unexpected
+	output (good for temporarily adding debugging output)
 2007-05-08  Bernhard R. Link <brlink@debian.org>
 	* output data received from helper (i.e. valgrind) line-by-line
 	  for better readabilty.
